--- a/css/experience.css
+++ b/css/experience.css
@@ -43,8 +43,13 @@
   .desc {
     margin-top: 0.5rem;
     color: #7a5947;
-    font-size: 0.875rem;
+    font-size: 1.15rem;
     line-height: 1.25rem;
+  }
+
+  .points{
+    color: #7a5947;
+    font-size: 1.0rem;
   }
   
   
