--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -12,4 +12,12 @@
     background-color: #58682a;
     color:antiquewhite
   }
+
+  .card-title{
+    color: #543D31;
+  }
+
+  .card-text{
+    color: #7a5947;
+  }
   
