--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -14,11 +14,11 @@
   }
 
   .card-title{
-    color: #543D31;
+    color: #291e18;
   }
 
   .card-text{
-    color: #7a5947;
+    color: #3a2a22;
   }
 
   .card{
